--- a/main.css
+++ b/main.css
@@ -90,7 +90,7 @@ a {text-decoration:none;}
 
 
 .button1 {
-    background-color: white;
+    background-image: url(images/16703619-Girl-and-boy-on-white-background-Stock-Vector-love-cartoon-couple.jpg);
     color: black;
     border: 2px solid #f44336;
     padding: 80px;
@@ -105,7 +105,7 @@ a {text-decoration:none;}
 }
 
 .button2 {
-    background-color: white;
+    background-image: url(images/photodune-8965671-group-of-diverse-multiethnic-people-teamwork-m.jpg);
     color: black;
     border: 2px solid green;
     padding: 80px;
@@ -119,7 +119,7 @@ a {text-decoration:none;}
 }
 
 .button3 {
-    background-color: white;
+    background-image: url(images/science.png);
     color: black;
     border: 2px solid blue;
     padding: 80px;
