--- a/main.css
+++ b/main.css
@@ -90,19 +90,14 @@ a {text-decoration:none;}
 
 
 .button1 {
-    background: background:
-    linear-gradient(
-        rgba(0, 0, 0, 0.6),
-        rgba(0, 0, 0, 0.6)
-    ), url(images/16703619-Girl-and-boy-on-white-background-Stock-Vector-love-cartoon-couple.jpg);
-    background-size: cover;
-    width: 300px;
-    height: 200px;
-    margin: 10px 0 0 10px;
-    position: relative;
-    float: left;
+    background: url(images/16703619-Girl-and-boy-on-white-background-Stock-Vector-love-cartoon-couple.jpg);
+    color: black;
+    border: 2px solid #f44336;
+    padding: 80px;
+    margin-left: 12%;
+    margin-right: 1%;
+    font-size: larger;
 }
-
 .button1:hover {
     background-color: #f44336;
     color: white;
