--- a/css/communities.css
+++ b/css/communities.css
@@ -1,3 +1,9 @@
+body{
+    /*background-image: url("../images/cool-background.jpg");*/
+    position: relative;
+    background-color: white;
+    background-size: cover;
+}
 ul, li {
     list-style:none;
     padding:0;
@@ -82,6 +88,7 @@ a {text-decoration:none;}
 .horizontal_menu{
     display: none;
     color: #0088cc;
+    background-color: black;
 }
 
 .menu li a:focus~.horizontal_menu,
@@ -99,7 +106,7 @@ a {text-decoration:none;}
 }
 
 .button1 {
-    background-color: white;
+
     color: black;
     border: 2px solid #f44336;
     padding: 10px;
@@ -115,7 +122,6 @@ a {text-decoration:none;}
 
 
 .button2 {
-    background-color: white;
     color: black;
     border: 2px solid green;
     padding: 10px;
@@ -127,7 +133,7 @@ a {text-decoration:none;}
 }
 
 .button3 {
-    background-color: white;
+
     color: black;
     border: 2px solid blue;
     padding: 10px;
