added the new option menu somewhere

--- a/views/css/main.css
+++ b/views/css/main.css
@@ -7,7 +7,7 @@ a {text-decoration:none;}
 
 .profile-wrapper {
     width:200px;
-    position: relative;
+    position: fixed;
     margin:-190px auto;
     padding-left: 86%;
 }
