--- a/views/myProfile/myEvents.html
+++ b/views/myProfile/myEvents.html
@@ -8,7 +8,7 @@
         <ul class="profile-wrapper">
             <li>
                 <div class="profile">
-                    <a href ="index.html" class="name">UserExample</a>
+                    <a href ="../home/index.html" class="name">UserExample</a>
                     <ul class="menu">
                         <li><a href="MyProfile.html">My profile</a></li>
                         <li><a href="Settings.html">Settings</a></li>
@@ -33,11 +33,37 @@
 <div id="navMyProfile">
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
-        <li class="navLi"><a href="myevents.html">My Events</a></li>
-        <li class="navLi"><a href="myvideos.html">My videos</a></li>
+        <li class="navLi"><a href="myEvents.html">My Events</a></li>
+        <li class="navLi"><a href="myVideos.html">My videos</a></li>
     </ul>
 </div>
-
+<div class="event">
+    <a href ="#" class="name">Would you like to start an event?</a>
+    <ul class="menu">
+        <li>
+            <a href="#">Event Type</a>
+            <div class="horizontal_menu">
+                <ul>
+                    <a href="../MyProfile/interests.html"><li>Interests</li></a>
+                    <a href="../MyProfile/myEvents.html"><li>My events</li></a>
+                    <a href="../MyProfile/myVideos.html"><li>My videos</li></a>
+                </ul>
+            </div>
+        </li>
+        <li>
+            <a id="page_settings" href="#">Settings</a>
+            <div class="horizontal_menu" hidden>
+                <ul>
+                    <a href="../settings/ChangePassword.html"><li>Change password</li></a>
+                    <a href="../settings/ChangeUsername.html"><li>Change username</li></a>
+                    <a href="../settings/ChangeImage.html"><li>Change image</li></a>
+                </ul>
+            </div>
+        </li>
+        <li><a id="page_self_improve_tool" href="../myProfile/SelfImprove.html">Selfimprove tool</a></li>
+        <li><a id="page_logout" href="#">Log out</a></li>
+    </ul>
+</div>
 
 </body>
 </html>
