--- a/views/myProfile/MyProfile.html
+++ b/views/myProfile/MyProfile.html
@@ -19,8 +19,8 @@
                         <div class="horizontal_menu">
                             <ul>
                                 <a href="interests.html"><li>Interests</li></a>
-                                <a href="myevents.html"><li>My events</li></a>
-                                <a href="myvideos.html"><li>My videos</li></a>
+                                <a href="myEvents.html"><li>My events</li></a>
+                                <a href="myVideos.html"><li>My videos</li></a>
                             </ul>
                         </div>
                     </li>
