--- a/css/communities.css
+++ b/css/communities.css
@@ -1,3 +1,9 @@
+body{
+    background-image: url("../images/cool-background.jpg");
+    position: relative;
+    background-color: white;
+    background-size: cover;
+}
 ul, li {
     list-style:none;
     padding:0;
@@ -82,6 +88,7 @@ a {text-decoration:none;}
 .horizontal_menu{
     display: none;
     color: #0088cc;
+    background-color: black;
 }
 
 .menu li a:focus~.horizontal_menu,
@@ -99,7 +106,7 @@ a {text-decoration:none;}
 }
 
 .button1 {
-    background-color: white;
+
     color: black;
     border: 2px solid #f44336;
     padding: 10px;
@@ -115,9 +122,8 @@ a {text-decoration:none;}
 
 
 .button2 {
-    background-color: white;
     color: black;
-    border: 2px solid blue;
+    border: 2px solid green;
     padding: 10px;
 }
 .button2:hover {
@@ -127,9 +133,8 @@ a {text-decoration:none;}
 }
 
 .button3 {
-    background-color: white;
     color: black;
-    border: 2px solid limegreen;
+    border: 2px solid blue;
     padding: 10px;
 }
 .button3:hover {
@@ -200,3 +205,51 @@ a {text-decoration:none;}
     -webkit-border-radius:50%;
     -webkit-box-shadow:rgb(110,110,110) 0px 0px 20px;
 }
+.btn {
+    height: 30px;
+    position: absolute;
+    right: 0;
+    top: 5px;
+    border-radius:1px;
+}
+.the_footer {
+    clear:both;
+    text-align: right;
+    padding: 20px;
+    margin-bottom: 15px;
+}
+
+
+/**************LOGIN FORM DESING*****************/
+#login{
+	background-color: transparent;
+	width:35%;
+	margin-left:400px;
+	margin-top:80px;
+	padding-bottom:50px;
+	font-size:20px;	
+	border:1px solid white;
+	}
+#inputForm{
+	margin-left:40px;
+	padding-top:10px;
+}
+	#login input{
+	padding:10px 200px 10px 5px;
+}
+	input[type=submit]{
+	margin-left:40px;
+	margin-top:20px;
+	cursor:pointer;
+	border-radius:3px;
+	background-color: black;
+	color: white;
+	width:80%;
+	font-size:15px;		
+	text-align:center;
+	border:1px solid blue;
+}
+input[type=submit]:hover {
+	background-color: brown;
+}
+/*********************************************/
