--- a/css/communities.css
+++ b/css/communities.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/cool-background.jpg");
+   /* background-image: url("../images/cool-background.jpg"); */
     position: relative;
     background-color: white;
     background-size: cover;
@@ -106,26 +106,26 @@ a {text-decoration:none;}
 }
 
 .button1 {
-
     color: black;
     border: 2px solid #f44336;
     padding: 10px;
     margin-left: 44%;
-
+    border-radius: 50%;
 }
+
 .button1:hover {
     background-color: #f44336;
     color: white;
     padding: 12px;
 }
 
-
-
 .button2 {
     color: black;
     border: 2px solid green;
     padding: 10px;
+    border-radius: 50%;
 }
+
 .button2:hover {
     background-color: green;
     color: white;
@@ -136,7 +136,9 @@ a {text-decoration:none;}
     color: black;
     border: 2px solid blue;
     padding: 10px;
+    border-radius: 50%;
 }
+
 .button3:hover {
     background-color: blue;
     color: white;
@@ -217,4 +219,83 @@ a {text-decoration:none;}
     text-align: right;
     padding: 20px;
     margin-bottom: 15px;
+}
+.navUL {
+    margin-left: 33%;
+    margin-right: 38.9%;
+}
+.w3-btn {margin-bottom:10px;}
+.button{
+    display: inline-block;
+    line-height: 40px;
+    /*width: 10vw;
+    height: 300px; */
+}
+
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+.container-fluid {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+article .author {
+    margin-bottom: 0;
+}
+article .author  {
+    display: block;
+    font-size: 100%;
+    line-height: 1.42857143;
+    color: #b4bcc2;
+}
+article .author  {
+    content: '\2014 \00A0';
+}
+.pull-right {
+    float: right !important;
+}
+.btn1 {
+    border-width: 2px;
+}
+.btn1:active {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.btn1-group.open .dropdown-toggle {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+table a:not(.btn),
+.table a:not(.btn) {
+    text-decoration: underline;
 }
