--- a/css/communities.css
+++ b/css/communities.css
@@ -98,18 +98,33 @@ a {text-decoration:none;}
     display:block;
 }
 
+#contents {
+    position: fixed;
+    width:100%;
+    margin:0 auto;
+}
+
+#navMyProfile {
+    position: absolute;
+    left: 32%;
+    top: 6vw;
+}
+
 .button1 {
     background-color: white;
     color: black;
     border: 2px solid #f44336;
     padding: 10px;
     margin-left: 44%;
-
+    border-radius: 50%;
+    position: relative;
 }
 .button1:hover {
     background-color: #f44336;
     color: white;
     padding: 12px;
+    border-radius: 50%;
+    position: relative;
 }
 
 
@@ -118,11 +133,14 @@ a {text-decoration:none;}
     color: black;
     border: 2px solid green;
     padding: 10px;
+    border-radius: 50%;
+    position: relative;
 }
 .button2:hover {
     background-color: green;
     color: white;
     padding: 12px;
+    border-radius: 50%;
 }
 
 .button3 {
@@ -130,11 +148,15 @@ a {text-decoration:none;}
     color: black;
     border: 2px solid blue;
     padding: 10px;
+    border-radius: 50%;
+    position: relative;
 }
 .button3:hover {
     background-color: blue;
     color: white;
     padding: 12px;
+    border-radius: 50%;
+    position: relative;
 }
 
 .button1:active {
@@ -155,6 +177,8 @@ a {text-decoration:none;}
     height: 200px;
     z-index: 15;
     margin: 0 auto;
+    top: 10vw;
+    right: 2vw;
 }
 
 .navUL {
@@ -170,9 +194,11 @@ a {text-decoration:none;}
     box-shadow:rgb(110,110,33) 0px 0px 13px;
     position: relative;
     overflow: hidden;
-    margin: 20px auto;
+    margin: 0 auto;
     transition: width 0.5s;
 }
+
+
 
 @media screen and (max-width: 800px) {
     .navUL {
@@ -199,3 +225,53 @@ a {text-decoration:none;}
     -webkit-border-radius:50%;
     -webkit-box-shadow:rgb(110,110,110) 0px 0px 20px;
 }
+
+#login{
+    background-color: transparent;
+    width:35%;
+    margin-left:36vw;
+    margin-top:7vw;
+    padding-bottom:18vw;
+    font-size:20px;
+    border:1px solid white;
+}
+#inputForm{
+    margin-left:40px;
+    padding-top:10px;
+}
+#login input{
+    padding: 10px 90px 10px 5px;
+}
+input[type=submit]{
+    margin-left:120px;
+    margin-top:20px;
+    cursor:pointer;
+    border-radius:3px;
+    background-color: black;
+    color: white;
+    width:10%;
+    font-size:15px;
+    text-align:center;
+    border:1px solid blue;
+}
+input[type=submit]:hover {
+    background-color: brown;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
