--- a/css/communities.css
+++ b/css/communities.css
@@ -219,6 +219,7 @@ a {text-decoration:none;}
     text-align: right;
     padding: 20px;
     margin-bottom: 15px;
+    position: relative;
 }
 .navUL {
     margin-left: 33%;
@@ -260,8 +261,9 @@ a {text-decoration:none;}
     padding-right: 15px;
 }
 .row {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-top: 2%;
+    margin-left: 24%;
+   /* margin-right: 1500px; */
 }
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
     position: relative;
@@ -298,4 +300,30 @@ article .author  {
 table a:not(.btn),
 .table a:not(.btn) {
     text-decoration: underline;
+}
+
+.article_position{
+    position: relative;
+    padding: 10px;
+    left: 5%;
+    right: 1%;
+    width: 70%;
+    height: 50%;
+    overflow: hidden;
+}
+.sidebar-box {
+    max-height: 120px;
+    position: relative;
+    overflow: hidden;
+}
+.sidebar-box .read-more {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0; padding: 30px 0;
+
+    /* "transparent" only works here because == rgba(0,0,0,0) */
+    background-image: linear-gradient(to bottom, transparent, black);
 }
