--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/cool-background.jpg");
+    /*background-image: url("../images/cool-background.jpg");*/
     position: relative;
     background-color: white;
     background-size: cover;
