--- a/views/myProfile/myEvents.html
+++ b/views/myProfile/myEvents.html
@@ -37,32 +37,9 @@
         <li class="navLi"><a href="myVideos.html">My videos</a></li>
     </ul>
 </div>
-<div class="event">
-    <a href ="#" class="name">Would you like to start an event?</a>
-    <ul class="menu">
-        <li>
-            <a href="#">Event Type</a>
-            <div class="horizontal_menu">
-                <ul>
-                    <a href="../MyProfile/interests.html"><li>Interests</li></a>
-                    <a href="../MyProfile/myEvents.html"><li>My events</li></a>
-                    <a href="../MyProfile/myVideos.html"><li>My videos</li></a>
-                </ul>
-            </div>
-        </li>
-        <li>
-            <a id="page_settings" href="#">Settings</a>
-            <div class="horizontal_menu" hidden>
-                <ul>
-                    <a href="../settings/ChangePassword.html"><li>Change password</li></a>
-                    <a href="../settings/ChangeUsername.html"><li>Change username</li></a>
-                    <a href="../settings/ChangeImage.html"><li>Change image</li></a>
-                </ul>
-            </div>
-        </li>
-        <li><a id="page_self_improve_tool" href="../myProfile/SelfImprove.html">Selfimprove tool</a></li>
-        <li><a id="page_logout" href="#">Log out</a></li>
-    </ul>
+
+<div class="newEvent">
+    <p class="eventButton" type="button" style="color: white"><a href="createNewEvent.html">Create New Event</a></p>
 </div>
 
 </body>
