--- a/css/main.css
+++ b/css/main.css
@@ -106,11 +106,12 @@ a {text-decoration:none;}
 
 
 .button1 {
-    background-color: white;
-    color: black;
-    border: 2px solid #f44336;
+    background-image: url("./../images/bbbbbbbb.jpg");
+    background-size: cover;
+    color: white;
+    border: 2px solid black;
     padding: 5%;
-    margin-left: 12%;
+    margin-left: 16%;
     margin-right: 1%;
     font-size: larger;
     border-radius: 70px;
@@ -123,12 +124,14 @@ a {text-decoration:none;}
 }
 
 .button2 {
-    background-color: white;
-    color: black;
-    border: 2px solid limegreen;
+    background-image: url("./../images/worldinhan.jpg");
+    background-size: cover;
+    color: white;
+    border: 2px solid black;
     padding: 5%;
     font-size: larger;
     border-radius: 70px;
+    
 }
 .button2:hover {
     background-color: limegreen;
@@ -138,9 +141,10 @@ a {text-decoration:none;}
 }
 
 .button3 {
-    background-color: white;
-    color: black;
-    border: 2px solid #0088cc;
+    background-image: url("./../images/scianswe.jpg");
+    background-size: cover;
+    color: white;
+    border: 2px solid black;
     font-size: larger;
     padding: 5%;
     border-radius: 70px;
