--- a/css/communities.css
+++ b/css/communities.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/cool-background.jpg");
+   /* background-image: url("../images/cool-background.jpg"); */
     position: relative;
     background-color: white;
     background-size: cover;
@@ -106,26 +106,26 @@ a {text-decoration:none;}
 }
 
 .button1 {
-
     color: black;
     border: 2px solid #f44336;
     padding: 10px;
     margin-left: 44%;
-
+    border-radius: 50%;
 }
+
 .button1:hover {
     background-color: #f44336;
     color: white;
     padding: 12px;
 }
 
-
-
 .button2 {
     color: black;
     border: 2px solid green;
     padding: 10px;
+    border-radius: 50%;
 }
+
 .button2:hover {
     background-color: green;
     color: white;
@@ -136,7 +136,9 @@ a {text-decoration:none;}
     color: black;
     border: 2px solid blue;
     padding: 10px;
+    border-radius: 50%;
 }
+
 .button3:hover {
     background-color: blue;
     color: white;
@@ -160,7 +162,8 @@ a {text-decoration:none;}
     width: 240px;
     height: 200px;
     z-index: 15;
-    margin: 0 auto;
+    margin-right: 50px;
+    margin-left: 460px;
 }
 
 .navUL {
@@ -178,6 +181,8 @@ a {text-decoration:none;}
     overflow: hidden;
     margin: 20px auto;
     transition: width 0.5s;
+    margin-left: 33%;
+    margin-right: 38.9%;
 }
 
 @media screen and (max-width: 800px) {
@@ -217,110 +222,220 @@ a {text-decoration:none;}
     text-align: right;
     padding: 20px;
     margin-bottom: 15px;
+    position: relative;
+}
+.navUL {
+    margin-left: 33%;
+    margin-right: 38.9%;
+}
+.w3-btn {margin-bottom:10px;}
+.button{
+    display: inline-block;
+    line-height: 40px;
+    /*width: 10vw;
+    height: 300px; */
 }
 
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+.container-fluid {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.row {
+    margin-top: 2%;
+    margin-left: 24%;
+   /* margin-right: 1500px; */
+}
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+article .author {
+    margin-bottom: 0;
+}
+article .author  {
+    display: block;
+    font-size: 100%;
+    line-height: 1.42857143;
+    color: #b4bcc2;
+}
+article .author  {
+    content: '\2014 \00A0';
+}
+.pull-right {
+    float: right !important;
+}
+.btn1 {
+    border-width: 2px;
+}
+.btn1:active {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.btn1-group.open .dropdown-toggle {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+table a:not(.btn),
+.table a:not(.btn) {
+    text-decoration: underline;
+}
 
-/**************LOGIN FORM DESING*****************/
+.article_position{
+    position: relative;
+    padding: 10px;
+    left: 5%;
+    right: 1%;
+    width: 70%;
+    height: 50%;
+    overflow: hidden;
+}
+.sidebar-box {
+    max-height: 120px;
+    position: relative;
+    overflow: hidden;
+}
+.sidebar-box .read-more {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0; padding: 30px 0;
+
+    /* "transparent" only works here because == rgba(0,0,0,0) */
+    background-image: linear-gradient(to bottom, transparent, black);
+}
+.centered {
+    display: flex;
+    position: relative;
+}
 #login{
-	background-color: transparent;
-	width:35%;
-	margin-left:400px;
-	margin-top:80px;
-	padding-bottom:50px;
-	font-size:20px;	
-	border:1px solid white;
-	}
+    background-color: transparent;
+    width:35%;
+    margin-left:400px;
+    margin-top:80px;
+    padding-bottom:50px;
+    font-size:20px;
+    border:1px solid white;
+}
 #inputForm{
-	margin-left:40px;
-	padding-top:10px;
-	
+    margin-left:40px;
+    padding-top:10px;
 }
 #login input{
-	padding:10px 200px 10px 5px;
+    padding:10px 200px 10px 5px;
 }
 input[type=submit]{
-	margin-left:40px;
-	margin-top:20px;
-	cursor:pointer;
-	border-radius:3px;
-	background-color: black;
-	color: white;
-	width:80%;
-	font-size:15px;		
-	text-align:center;
-	border:1px solid blue;
+    margin-left:40px;
+    margin-top:20px;
+    cursor:pointer;
+    border-radius:3px;
+    background-color: black;
+    color: white;
+    width:80%;
+    font-size:15px;
+    text-align:center;
+    border:1px solid blue;
 }
-#login2 {
-	padding: 0 0 0 150px;
-}
-
 input[type=submit]:hover {
-	background-color: brown;
+    background-color: brown;
+}
+.team{
+    margin-left: 10vw;
+    margin-top: 5vw;
+
+}
+.header{
+    margin-top: 2vw;
+}
+.bio{
+    margin-left: 20vw;
+}
+.submitButtons {
+    display: inline-block;
+    background-color: black;
+    border-color: black;
+    padding: 12px;
+    color: white;
+    border-radius: 3px;
+    box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
+
 }
 
-input[type=checkbox]{
-		margin-top:15px;
-		margin-left:40px;
+.submitButtons:hover {
+    color: #0088cc;
 }
-#register form{
-	background-color: transparent;
-	width:35%;
-	margin-left:400px;
-	margin-top:80px;
-	padding:10px;
-	font-size:20px;	
-	border:2px solid #9DC45F;
-	border-radius: 5px 5px 0px 0px;
+.lable {
+    display: inline-block;
+    color: white;
+    background-color: black;
+    padding: 4px;
+    border-radius: 3px;
+    box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
+    margin-right: 5px;
 }
-#register form h2{
-	text-align:center;
-	border:1px solid white;
+/* EVENT MENU */
+
+.newEvent{
+    margin-top: 120px;
+    display: inline-block;
+    float: right;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: white;
+    font-size: 12px;
+    background-color: black;
+    border-radius: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
 }
-#otherRows input{
-	padding:10px 280px 10px 5px;
-	margin-top:20px;
-	font-weight:bold;
-	border-radius:7px;
+
+.newEvent:hover {
+    color: #0088cc;
 }
-.controls{
-	margin-top:10px;
-}
-#dob-day,#dob-month,#dob-year{
-	padding:5px 10px 5px 10px;
-}
-#register h1 {
-    font: 17px "Trebuchet MS", Arial, Helvetica, sans-serif;
-	padding:15px 15px 15px 15px;
-	margin:-12px -12px 15px -12px;
-    color: #FFF;
-    background: #9DC45F;
-    text-shadow: 1px 1px 1px #949494;
-    border-radius: 5px 5px 0px 0px;
-    -webkit-border-radius: 5px 5px 0px 0px;
-    -moz-border-radius: 5px 5px 0px 0px;
-    border-bottom:1px solid #89AF4C;
-}
-#register .button {
-    background-color: #9DC45F;
+
+
+
+.formEvent {
+    position: fixed;
+    display: inline-block;
+    margin-top: 3vw;
+    background-color: lightgray;
     border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-border-radius: 5px;
-    border: none;
-    padding: 10px 25px 10px 25px;
-    color: #FFF;
-    text-shadow: 1px 1px 1px #949494;
+    padding: 15px;
+    align-content: center;
+    margin-left: 33vw;
+    box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
+    float: right;
+
 }
-#register .button:hover {
-    background-color:#80A24A;
-	cursor:pointer;
+.text {
+    margin-top: 20vw;
 }
-/*********************************************/
-
-
-
-
-
-
-
 
 
