--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+body{
+    background-image: url("../images/GHP_12a_2016 (268).jpg");
+    position: relative;
+    background-color: white;
+    background-size: cover;
+}
+
 ul, li {
     list-style:none;
     padding:0;
@@ -11,6 +18,7 @@ a {text-decoration:none;}
     margin:-190px auto;
     padding-left: 86%;
 }
+
 .profile-wrapper::after {
     content: '';
     position: absolute;
@@ -20,6 +28,7 @@ a {text-decoration:none;}
     border-width: 6px;
     border-style: solid;
 }
+
 .profile-wrapper::before {
     content: '';
     position: absolute;
@@ -29,6 +38,7 @@ a {text-decoration:none;}
     border-width: 6px;
     border-style: solid;
 }
+
 .profile-wrapper:hover::after {
     border-color: #111 transparent transparent;
 }
@@ -39,7 +49,6 @@ a {text-decoration:none;}
     border-radius:3px;
     box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
     background:-webkit-linear-gradient(#222, #111);
-
 }
 
 .profile:hover {
@@ -100,61 +109,65 @@ a {text-decoration:none;}
     display:block;
 }
 
-#contents {
-    margin-top: 190px;
+.city {
+    float: left;
+    margin: 5px;
+    padding: 15px;
+    max-width: 300px;
+    height: 300px;
+    border: 1px solid black;
 }
 
+#contents {
+    margin-top: 200px;
+}
+
+.button{
+    text-align: center;
+    display: inline-block;
+    line-height: 40px;
+    width: 30vw;
+    height: 300px;
+}
 
 .button1 {
-    background-image: url("./../images/bbbbbbbb.jpg");
+    background-image: url("../images/cool-background.jpg");
     background-size: cover;
-    color: white;
-    border: 2px solid black;
-    padding: 5%;
-    margin-left: 16%;
-    margin-right: 1%;
+    color: black;
+    border: 2px solid ;
     font-size: larger;
-    border-radius: 70px;
+    border-radius: 80%;
 }
 .button1:hover {
     background-color: #f44336;
-    color: white;
-    padding: 5.3%;
-    border-radius: 70px;
+    border-radius: 50%;
 }
 
 .button2 {
-    background-image: url("./../images/worldinhan.jpg");
+    /*background-image: url("../images/image2.jpg");*/
     background-size: cover;
-    color: white;
+    color: black;
     border: 2px solid black;
-    padding: 5%;
     font-size: larger;
-    border-radius: 70px;
-    
+    border-radius: 50%;
 }
 .button2:hover {
     background-color: limegreen;
     color: white;
-    padding: 5.3%;
-    border-radius: 70px;
+    border-radius: 50%;
 }
 
 .button3 {
-    background-image: url("./../images/scianswe.jpg");
-    background-size: cover;
-    color: white;
-    border: 2px solid black;
-    font-size: larger;
-    padding: 5%;
-    border-radius: 70px;
-    margin-right: 1%;
+/*background-image: url("../images/image2.jpg");*/
+background-size: cover;
+border: 2px solid black;
+font-size: larger;
+border-radius: 50%;
 }
 .button3:hover {
     background-color: #0088cc;
     color: white;
-    padding: 5.3%;
-    border-radius: 70px;
+    border-radius: 50%;
 }
 
 .button1:active {
@@ -168,4 +181,17 @@ a {text-decoration:none;}
 .button3:active {
     font-size: 80%;
 }
-
+.btn {
+    height: 30px;
+    position: absolute;
+    right: 0;
+    top: 5px;
+    border-radius:1px;
+}
+.the_footer {
+    clear:both;
+    text-align: right;
+    padding: 20px;
+    margin-bottom: 15px;
+}
+.w3-btn {margin-bottom:10px;}
