--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ a {text-decoration:none;}
     margin-right: 1%;
 }
 .button3:hover {
-    background-color: #0088cc;
+    background-color: deepskyblue;
     color: white;
     padding: 5.3%;
     border-radius: 70px;
