--- a/css/communities.css
+++ b/css/communities.css
@@ -114,8 +114,7 @@ a {text-decoration:none;}
 }
 
 .button1 {
-    background-color: white;
-    color: black;
+    background-color: transparent;
     border: 2px solid #f44336;
     padding: 10px;
     margin-left: 44%;
@@ -124,7 +123,6 @@ a {text-decoration:none;}
 }
 .button1:hover {
     background-color: #f44336;
-    color: white;
     padding: 12px;
     border-radius: 50%;
     position: relative;
@@ -132,8 +130,7 @@ a {text-decoration:none;}
 
 
 .button2 {
-    background-color: white;
-    color: black;
+    background-color: transparent;
     border: 2px solid limegreen;
     padding: 10px;
     border-radius: 50%;
@@ -141,14 +138,12 @@ a {text-decoration:none;}
 }
 .button2:hover {
     background-color: limegreen;
-    color: white;
     padding: 12px;
     border-radius: 50%;
 }
 
 .button3 {
-    background-color: white;
-    color: black;
+    background-color: transparent;
     border: 2px solid #0088cc;
     padding: 10px;
     border-radius: 50%;
@@ -156,7 +151,6 @@ a {text-decoration:none;}
 }
 .button3:hover {
     background-color: #0088cc;
-    color: white;
     padding: 12px;
     border-radius: 50%;
     position: relative;
