--- a/css/main.css
+++ b/css/main.css
@@ -105,63 +105,68 @@ a {text-decoration:none;}
 }
 
 
-.button1 {
-    background-color: white;
+#button1 {
+    background: transparent;
     color: black;
     border: 2px solid #f44336;
-    padding: 5%;
-    margin-left: 12%;
-    margin-right: 1%;
+    padding: 5vw;
+    margin-left: 14vw;
+    margin-right: 1vw;
     font-size: larger;
     border-radius: 70px;
 }
-.button1:hover {
+#button1:hover {
     background-color: #f44336;
     color: white;
-    padding: 5.3%;
+    padding: 5.3vw;
     border-radius: 70px;
+    opacity: 0.5;
 }
 
-.button2 {
-    background-color: white;
+
+#button2 {
+    background-color: transparent;
     color: black;
     border: 2px solid limegreen;
-    padding: 5%;
+    padding: 5vw;
     font-size: larger;
     border-radius: 70px;
+    margin-right: 21vw;
 }
-.button2:hover {
+#button2:hover {
     background-color: limegreen;
     color: white;
-    padding: 5.3%;
+    padding: 5.3vw;
+    opacity: 0.60;
     border-radius: 70px;
 }
 
-.button3 {
-    background-color: white;
+#button3 {
+    background-color: transparent;
     color: black;
-    border: 2px solid #0088cc;
+    border: 2px solid deepskyblue;
     font-size: larger;
-    padding: 5%;
+    padding: 5vw;
     border-radius: 70px;
-    margin-right: 1%;
+    margin-right: 1vw;
 }
-.button3:hover {
+#button3:hover {
     background-color: deepskyblue;
     color: white;
-    padding: 5.3%;
+    padding: 5.3vw;
+    opacity: 0.60;
     border-radius: 70px;
 }
 
-.button1:active {
+#button1:active {
     font-size: 80%;
 }
 
-.button2:active {
+#button2:active {
     font-size: 80%;
 }
 
-.button3:active {
+#button3:active {
     font-size: 80%;
 }
 
