FIXED MANY THINGS

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../images/GHP_12a_2016 (268).jpg");
+    background-image: url("../images/cool-background.jpg");
     position: relative;
     background-color: white;
     background-size: cover;
