--- a/css/communities.css
+++ b/css/communities.css
@@ -1,8 +1,19 @@
-body{
-   /* background-image: url("../images/cool-background.jpg"); */
+@font-face {
+    font-family: footer;
+    src: url(../fonts/Minecraftia-Regular.ttf);
+}
+* {
+    z-index: -5;
+}
+body {
     position: relative;
     background-color: white;
+    margin: 0;
+    padding: 0;
+    background-image: url("../images/cool-background.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 ul, li {
     list-style:none;
@@ -15,7 +26,9 @@ a {text-decoration:none;}
     width:200px;
     position: fixed;
     margin:-10px auto;
-    padding-left: 86%;
+    right: 0;
+    top:15px;
+    z-index: 5;
 }
 .profile-wrapper::after {
     content: '';
@@ -50,6 +63,7 @@ a {text-decoration:none;}
     cursor:pointer;
     background:-webkit-linear-gradient(#1f1f1f, #0a0a0a);
 }
+
 .profile .name {
     font-size:12px;
     color:#fff;
@@ -91,8 +105,8 @@ a {text-decoration:none;}
     background-color: black;
 }
 
-.menu li a:focus~.horizontal_menu,
-.horizontal_menu:hover{
+.username:hover .horizontal_menu,
+.horizontal_menu:hover, .username:hover{
     display: block;
 }
 
@@ -109,7 +123,6 @@ a {text-decoration:none;}
     color: black;
     border: 2px solid #f44336;
     padding: 10px;
-    margin-left: 44%;
     border-radius: 50%;
 }
 
@@ -165,50 +178,62 @@ a {text-decoration:none;}
     margin-right: 50px;
     margin-left: 460px;
 }
+#settings2
+{
+    width: 240px;
+    height: 200px;
+    z-index: 0;
+    position: relative;
+    padding: 10px;
+    left: 35vw;
+    top: 15vw;
 
+}
+#navMyProfile{
+    z-index: 2;
+    position: fixed;
+    top: 50px;
+    margin: 0 auto;
+    width: 100%;
+}
 .navUL {
     width: 30vw;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     list-style-type: none;
     padding: 0;
-    background-color: #222;
-    border-radius: 50%;
-    background:-webkit-radial-gradient(center, circle, black 28%,white 110%);
+    background:black;
     box-shadow:rgb(110,110,33) 0px 0px 13px;
     position: relative;
     overflow: hidden;
     margin: 20px auto;
     transition: width 0.5s;
-    margin-left: 33%;
-    margin-right: 38.9%;
-}
-
-@media screen and (max-width: 800px) {
-    .navUL {
-        width: 90vw;
-    }
 }
 
 .navLi {
     float: left;
     text-align: center;
+    width: 150px;
 }
 
 .navLi a, .dropbtn {
     display: inline-block;
     color: whitesmoke;
-    padding: 14px 16px;
+    line-height: 50px;
     text-decoration: none;
+    width: 120px;
+    background-color: black;
+    transition: background-color 0.5s;
 }
 
 .navLi a:hover, .dropdown:hover .dropbtn {
-    border-radius: 50%;
-    background-color: #0088cc;
-    background:-webkit-radial-gradient(center, circle, #0088cc 95%,black 110%);
-    -webkit-border-radius:50%;
-    -webkit-box-shadow:rgb(110,110,110) 0px 0px 20px;
+    background:white;
+    color: black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    box-shadow:rgb(110,110,110) 0px 0px 20px;
 }
 .btn {
     height: 30px;
@@ -221,7 +246,9 @@ a {text-decoration:none;}
     clear:both;
     text-align: right;
     padding: 20px;
-    position: relative;
+    position: absolute;
+    right: 0;
+    font-family: footer;
 }
 .navUL {
     margin-left: 33%;
@@ -231,6 +258,7 @@ a {text-decoration:none;}
 .button{
     display: inline-block;
     line-height: 40px;
+    margin: 0 2px;
     /*width: 10vw;
     height: 300px; */
 }
@@ -397,6 +425,7 @@ input[type=submit]:hover {
     border-radius: 3px;
     box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
     margin-right: 5px;
+
 }
 /* EVENT MENU */
 
@@ -418,20 +447,17 @@ input[type=submit]:hover {
     color: #0088cc;
 }
 
-
-
 .formEvent {
-    position: fixed;
-    display: inline-block;
-    margin-top: 3vw;
+    position: relative;
     background-color: lightgray;
     border-radius: 5px;
     padding: 15px;
     align-content: center;
-    margin-left: 33vw;
     box-shadow:0 1px 0 #555 inset, 0 1px 7px #111;
-    float: right;
-    margin-right: 33vw;
+    display: block;
+    margin: 0 auto;
+    width: 30%;
+    margin-top: 150px;
 }
 .text {
     margin-top: 20vw;
@@ -499,11 +525,78 @@ input[type=submit]:hover {
     margin: 0 auto;
 }
 .textbox{
-   margin-top: 10vw;
+   margin-top: 10px;
     resize: none;
 }
+
+
 #contents {
     position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     width:100%;
     margin:0 auto;
+    top: 20px;
+    z-index: 2;
+}
+
+.nav{
+     z-index: 5;
+ }
+article{
+    width:60%;
+    margin: 0px auto 20px auto;
+    padding-bottom: 10px;
+
+    border: 2px solid green;
+    border-radius: 10px;
+    background: rgba(222, 122, 30, 0.7);
+    z-index: -4;
+}
+
+.article_containter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin-top: 150px;
+    z-index: -3;
+}
+@media screen and (max-width: 800px){
+    article{
+        width: 95%;
+    }
+    .navUL {
+        width: 45vw;
+        flex-direction: column;
+    }
+    #contents{
+        top: 70px;
+    }
+    #navMyProfile{
+        top: 100px;
+    }
+    .article_containter{
+        margin-top:280px;
+    }
+
+    .settings2{
+        top: 20vw;
+    }
+}
+
+.profile_div{
+    position: fixed;
+
+}
+
+.the_footer2{
+    clear:both;
+    text-align: right;
+    padding: 20px;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    font-family: footer;
 }
